--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.13",
+    "@hookform/resolvers": "^2.9.11",
     "@tanstack/react-query": "^4.26.1",
     "@types/node": "18.15.3",
     "@types/react": "18.0.28",
@@ -21,8 +22,10 @@
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.7",
     "swiper": "^9.1.1",
-    "typescript": "5.0.2"
+    "typescript": "5.0.2",
+    "yup": "^1.0.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
