--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 NEXT_PUBLIC_URL=https://api.npoint.io/32bbcc24b64b7d176c62
+NEXT_PUBLIC_URL_ZAPIER=https://hooks.zapier.com/hooks/catch/14815972/33t9p6u
