--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.7",
+    "react-toastify": "^9.1.1",
     "swiper": "^9.1.1",
     "typescript": "5.0.2",
     "yup": "^1.0.2"
